# accordion

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp  mainwindow.cpp  mainwindow.hpp
src/: accordion.cpp  accordion.hpp  collapsiblepane.cpp
